fix bg color issue on mobile nav collapse

--- a/client/src/scss/_header.scss
+++ b/client/src/scss/_header.scss
@@ -13,8 +13,9 @@
 
   &:before {
     background-image: url('/img/header_bg.jpg');
+    background-color: $darkest;
     width: 100%;
-    height: 162px;
+    height: 100%;
 
     @include media-breakpoint-up(xl) {
       height: 140px;
@@ -30,14 +31,6 @@
       height: 28px;
       bottom: -11px;
       margin: 0 auto;
-    }
-  }
-
-  @include media-breakpoint-down(xl) {
-    &.open {
-      &:before {
-        height: 100%;
-      }
     }
   }
 
